league-card, fixed white space/line under gallery, -- now have to fix playercard

--- a/client/src/general-styles.css
+++ b/client/src/general-styles.css
@@ -87,7 +87,7 @@ body .container {
   //padding: 10px; /* 10px padding */
   //border: 2px solid red;
   //background-clip: content-box; /* <---- */
-  box-shadow: inset 0 0 0 42px lightgreen; 
+  box-shadow: inset 0 0 0 28px lightgreen; 
   //border-style:solid;
   //border-left:3px;
   //border-right:3px;
@@ -105,7 +105,7 @@ body .container {
   
   position:relative;
   
-  height:100%;
+  height:80%;
   
   //overflow: visible;
   //overflow: initial;
@@ -120,7 +120,7 @@ body .container {
   //background-image: url(/src/icons/pattern-stackedsports-bigger.png);
   //background-color:lightblue;
   //background-color:#F0FFFF;
-  //background-color:white;/*white background*/
+  background-color:white;/*white background*//*the background behind react-flip-container and above*/
   
   
   /*need to find a way to get the checkered just in card box, not full container, will probably need solution not in this class */
@@ -141,7 +141,38 @@ grid-template-columns: repeat(2, 1fr);
 }
 */
 
+
+.league-card{
+	
+	height:100%;
+	
+	
+}
+
+.sports-available-content{
+	//justify-content:center;
+	//margin:auto;
+}
+
+.league-name{
+	bottom:-4%;
+}
+.inner-league-name{
+	justify-content:center;
+	
+}
+
 .nav {
+	
+	//justify-content:center;
+	//margin:auto;
+	//display: flex;
+	display:grid;
+	grid-template-columns: repeat(auto-fit, minmax(200px,1fr));
+	//height:80%;
+	
+	//top:0.3rem;
+	
 	
 	background-color:lightgreen;
 	
@@ -149,12 +180,15 @@ grid-template-columns: repeat(2, 1fr);
 	
   //background-color: grey; /*next to cards*/
   color: white;/*just seems to affect text color*/
-  display: flex;
+  
   //justify-content: space-between;
   justify-content:center; /*KEEP center, not space-beween*/
   //align-items: stretch;
-  gap: 2rem;
-  padding: 0 1rem;
+  gap: 1.3rem;
+  
+  
+  //padding: 0 1rem;
+  //padding:1rem;
   
   //position:absolute;
   //top:0px;/*top 0px should be for the header only*/
@@ -165,7 +199,7 @@ grid-template-columns: repeat(2, 1fr);
   
   
   //height:8em;
-  height:6em;
+  height:5.5em;
   
   //margin:auto;
   //margin:0;
